--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,3 +1,11 @@
+name: Test
+on:
+  # Triggers the workflow on push but only for the main branch
+  push:
+    branches: [main]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   job1:
     runs-on: ubuntu-latest
