--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: bump_version
     steps:
-      - run: echo ${{ needs.bump_version.outputs.changelog }} ${{ needs.bump_version.outputs.new_tag }}
+      - run: echo ${{ needs.bump_version.outputs.new_tag }}
 
   # release:
   #   name: Release new code
