--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,80 +25,83 @@ jobs:
           release_branches: main
           default_bump: false
 
-  test:
+  # test:
+  #   runs-on: ubuntu-latest
+  #   needs: bump_version
+  #   steps:
+  #     - run: echo ${{ needs.bump_version.outputs.new_tag }}
+
+  release:
+    name: Release new code
     runs-on: ubuntu-latest
     needs: bump_version
     steps:
       - run: echo ${{ needs.bump_version.outputs.new_tag }}
 
-  # release:
-  #   name: Release new code
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout
-  #       uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-  #     - name: Set up node
-  #       uses: actions/setup-node@v2
-  #       with:
-  #         node-version: 16
-  #         registry-url: https://registry.npmjs.org
+      - name: Set up node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 16
+          registry-url: https://registry.npmjs.org
 
-  #     - name: Install dependencies
-  #       run: yarn install --frozen-lockfile
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
-  #     - name: Build the IPFS bundle
-  #       run: yarn build
+      - name: Build the IPFS bundle
+        run: yarn build
 
-  #     - name: Pin to IPFS
-  #       id: upload
-  #       uses: anantaramdas/ipfs-pinata-deploy-action@39bbda1ce1fe24c69c6f57861b8038278d53688d
-  #       with:
-  #         pin-name: PoolTogether ${{ needs.bump_version.outputs.new_tag }}
-  #         path: './out'
-  #         pinata-api-key: ${{ secrets.PINATA_API_KEY }}
-  #         pinata-secret-api-key: ${{ secrets.PINATA_API_SECRET_KEY }}
+      - name: Pin to IPFS
+        id: upload
+        uses: anantaramdas/ipfs-pinata-deploy-action@39bbda1ce1fe24c69c6f57861b8038278d53688d
+        with:
+          pin-name: PoolTogether ${{ needs.bump_version.outputs.new_tag }}
+          path: './out'
+          pinata-api-key: ${{ secrets.PINATA_API_KEY }}
+          pinata-secret-api-key: ${{ secrets.PINATA_API_SECRET_KEY }}
 
-  #     - name: Convert CIDv0 to CIDv1
-  #       id: convert_cidv0
-  #       uses: uniswap/convert-cidv0-cidv1@v1.0.0
-  #       with:
-  #         cidv0: ${{ steps.upload.outputs.hash }}
+      - name: Convert CIDv0 to CIDv1
+        id: convert_cidv0
+        uses: uniswap/convert-cidv0-cidv1@v1.0.0
+        with:
+          cidv0: ${{ steps.upload.outputs.hash }}
 
-  #     - name: Update DNS with new IPFS hash
-  #       env:
-  #         CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
-  #         CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
-  #         RECORD_DOMAIN: 'pooltogether.com'
-  #         RECORD_NAME: '_dnslink.decent-test'
-  #       uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
-  #       with:
-  #         cid: ${{ steps.upload.outputs.hash }}
+      - name: Update DNS with new IPFS hash
+        env:
+          CLOUDFLARE_TOKEN: ${{ secrets.CLOUDFLARE_TOKEN }}
+          CLOUDFLARE_ZONE_ID: ${{ secrets.CLOUDFLARE_ZONE_ID }}
+          RECORD_DOMAIN: 'pooltogether.com'
+          RECORD_NAME: '_dnslink.decent-test'
+        uses: textileio/cloudflare-update-dnslink@0fe7b7a1ffc865db3a4da9773f0f987447ad5848
+        with:
+          cid: ${{ steps.upload.outputs.hash }}
 
-  #     - name: Create GitHub Release
-  #       id: create_release
-  #       uses: actions/create-release@v1.1.0
-  #       env:
-  #         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       with:
-  #         tag_name: v${{ needs.bump_version.outputs.new_tag }}
-  #         release_name: Release ${{ needs.bump_version.outputs.new_tag }}
-  #         body: |
-  #           IPFS hash of the deployment:
-  #           - CIDv0: `${{ steps.upload.outputs.hash }}`
-  #           - CIDv1: `${{ steps.convert_cidv0.outputs.cidv1 }}`
+      - name: Create GitHub Release
+        id: create_release
+        uses: actions/create-release@v1.1.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: v${{ needs.bump_version.outputs.new_tag }}
+          release_name: Release ${{ needs.bump_version.outputs.new_tag }}
+          body: |
+            IPFS hash of the deployment:
+            - CIDv0: `${{ steps.upload.outputs.hash }}`
+            - CIDv1: `${{ steps.convert_cidv0.outputs.cidv1 }}`
 
-  #           The latest release is always accessible via our alias to the Cloudflare IPFS gateway at [v4.pooltogether.com](https://v4.pooltogether.com).
+            The latest release is always accessible via our alias to the Cloudflare IPFS gateway at [v4.pooltogether.com](https://v4.pooltogether.com).
 
-  #           You can also access the PoolTogether UI directly from an IPFS gateway.
+            You can also access the PoolTogether UI directly from an IPFS gateway.
 
-  #           **BEWARE**: The PoolTogether interface uses cookies and [`localStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage) to remember your settings, such as which wallet you have connected.
-  #           **You should always use an IPFS gateway that enforces origin separation**, or our alias to the latest release at [v4.pooltogether.com](https://v4.pooltogether.com).
-  #           Your PoolTogether settings are never remembered across different URLs.
+            **BEWARE**: The PoolTogether interface uses cookies and [`localStorage`](https://developer.mozilla.org/en-US/docs/Web/API/Window/localStorage) to remember your settings, such as which wallet you have connected.
+            **You should always use an IPFS gateway that enforces origin separation**, or our alias to the latest release at [v4.pooltogether.com](https://v4.pooltogether.com).
+            Your PoolTogether settings are never remembered across different URLs.
 
-  #           IPFS gateways:
-  #           - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.dweb.link/
-  #           - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.cf-ipfs.com/
-  #           - [ipfs://${{ steps.upload.outputs.hash }}/](ipfs://${{ steps.upload.outputs.hash }}/)
+            IPFS gateways:
+            - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.dweb.link/
+            - https://${{ steps.convert_cidv0.outputs.cidv1 }}.ipfs.cf-ipfs.com/
+            - [ipfs://${{ steps.upload.outputs.hash }}/](ipfs://${{ steps.upload.outputs.hash }}/)
 
-  #           ${{ needs.bump_version.outputs.changelog }}
+            ${{ needs.bump_version.outputs.changelog }}
